# HG1

./: .clang-format  .gitignore  CMakeLists.txt  SConstruct  Setup.bat
Game/: project.godot
Game/Addons/viclib/: viclib.gdextension  viclib.gdextension.uid
Game/Content/Levels/: Entry.tscn  game.tscn  zoo.tscn
Game/Content/Levels/Interactable/: GrabbableSample.tscn
Game/Content/Shaders/Grid/: M_Dynamic.tres  M_Floor.tres  M_Interactable.tres  M_Static.tres  ProceduralGrid.gdshader.uid
Game/Content/Shaders/procedural_grid/: m_dynamic.tres  m_floor.tres  (+2 more)
Game/Content/characters/: character.tscn  character_resource.tres
Source/: Game.cpp  Game.h  GameInput.cpp  GameInput.h  RegisterTypes.cpp  RegisterTypes.h
Source/Character/: Character.cpp  Character.h  CharacterResource.cpp  CharacterResource.h  CharacterScene.cpp  CharacterScene.h
Source/Character/Player/: Player.cpp  Player.h  PlayerResource.cpp  PlayerResource.h  PlayerScene.cpp  PlayerScene.h
Source/Character/StateMachine/: CharacterBaseState.cpp  CharacterBaseState.h  CharacterStateMachine.cpp  CharacterStateMachine.h  CharacterStateMachineCommon.h
Source/Cooking/FoodStand/: FoodStandResource.cpp  FoodStandResource.h  FoodStandScene.cpp  FoodStandScene.h
Source/Cooking/Ingredient/: Ingredient.cpp  Ingredient.h  IngredientResource.cpp  IngredientResource.h  IngredientScene.cpp  IngredientScene.h
Source/Cooking/IngredientContainer/: IngredientContainer.cpp  IngredientContainer.h  IngredientContainerResource.cpp  IngredientContainerResource.h  IngredientContainerScene.cpp  IngredientContainerScene.h
Source/Cooking/IngredientSpawner/: IngredientSpawnerResource.cpp  IngredientSpawnerResource.h  IngredientSpawnerScene.cpp  IngredientSpawnerScene.h
Source/Interaction/: Grabbable.cpp  Grabbable.h  GrabbableNode.cpp  GrabbableNode.h  GrabbableObject.cpp  GrabbableObject.h  IInteractable.h  Interactable.cpp  Interactable.h  InteractableNode.cpp  InteractableNode.h  InteractableObject.cpp  InteractableObject.h  InteractableRigidBody3D.cpp  InteractableRigidBody3D.h  InteractableStaticBody3D.cpp  InteractableStaticBody3D.h  InteractionComponent.cpp  InteractionComponent.h
Source/Levels/: Level.cpp  Level.h
Source/Settings/: GameSettings.cpp  GameSettings.h  UserSettings.cpp  UserSettings.h
Source/Utils/: SweepUtils.cpp  SweepUtils.h  Utils.h
(+22 files in other folders)
